--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -12,13 +12,13 @@ html *::after {
 body {
   margin: 0;
   min-width: 375px;
-  background-color: red;
+  background-color: var(--White);
   line-height: 1.5;
   font-weight: 400;
   font-size: 16px;
   font-family: var(--Rubik);
   font-style: normal;
-  color: var(--Color2);
+  color: var(--Dark);
 
   position: relative;
   overflow-x: hidden;
